--- a/my_app_name/pubspec.yaml
+++ b/my_app_name/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_app_name
+name: llm_openai_chatbot
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -40,10 +40,12 @@ dependencies:
   flutter_chat_types: ^3.6.2
   http: ^1.2.2
   image_picker: ^1.1.2
+  intl: ^0.19.0
   mime: ^1.0.5
   open_filex: ^4.5.0
   path_provider: ^2.1.4
   uuid: ^4.4.2
+  #added package
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/messages.json
-  #   - images/a_dot_ham.jpeg
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
